# example-cabal-project

./: .envrc  .ghci  .ghcid  .gitignore  README.md  cabal.project  cabal.project.local.sample  example-cabal-project.cabal  shell.nix
executables/: Main.hs
