cabal-version:       2.4
name:                example-cabal-project
version:             0.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- copyright:
-- category:

library
  hs-source-dirs:      library
  exposed-modules:     Library
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010

executable example-cabal-project
  hs-source-dirs:      executables
  main-is:             Main.hs
  other-modules:       Library
  -- other-extensions:
  build-depends:       example-cabal-project

                     , base >= 4.12.0.0 && < 5

  default-language:    Haskell2010
